RESOLVED FIXED62594
[chromium] Initializing the first accelerated 2d canvas context is slow
https://bugs.webkit.org/show_bug.cgi?id=62594
Summary [chromium] Initializing the first accelerated 2d canvas context is slow
Stephen White
Reported 2011-06-13 13:38:49 PDT
Creation of the first accelerated 2D Canvas is slow. See also http://code.google.com/p/chromium/issues/detail?id=85662.
Attachments
Patch (1.59 KB, patch)
2011-06-13 13:40 PDT, Stephen White
jamesr: review+
Stephen White
Comment 1 2011-06-13 13:40:53 PDT
James Robinson
Comment 2 2011-06-13 13:46:50 PDT
Comment on attachment 97001 [details] Patch R=me.
Stephen White
Comment 3 2011-06-13 14:11:21 PDT
Note You need to log in before you can comment on or make changes to this bug.