2011-06-13  Stephen White  <senorblanco@chromium.org>

Reviewed by James Robinson.

        Improve GPU canvas startup time on the SkiaGPU path.
        https://bugs.webkit.org/show_bug.cgi?id=62594

        Fixed by skipping creation of shaders used only by the legacy path.

        Covered by existing canvas tests.

        * platform/graphics/gpu/SharedGraphicsContext3D.cpp:
        (WebCore::SharedGraphicsContext3D::create):


Canonical link: https://commits.webkit.org/78094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88692 268f45cc-cd09-0410-ab3c-d52691b4dbfc